<resources>
    <string name="app_name">COVIDTracer</string>
    <string name="version_code">version %s</string>
    <string name="preferences_name" translatable="false">tech.camargo.covid</string>
    <string name="no_code">Enter Code</string>
    <string name="scan_again">Scan Again</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="start_again">Start Again</string>
    <string name="exit">Exit</string>
    <string name="cellphone">Cellphone</string>
    <string name="clear_attendance_list">Clear Visit List</string>
    <string name="clear_all">Clear All</string>
    <string name="about">About</string>
    <string name="privacy">Privacy</string>
    <string name="terms">Terms</string>
    <string name="version">version</string>
    <string name="recent_attendances">Recent Visits</string>
    <string name="new_attendance">New Visit</string>
    <string name="erase_attendances">Erase Visits</string>
    <string name="add_phone">Add your cellphone</string>
    <string name="agreed">Add</string>
    <string name="code">Code</string>
    <string name="send">Send</string>
    <string name="attendance_did_register">The visit has been registered!</string>
    <string name="attendance_register_err">An error occurred while registering. Try again!</string>
    <string name="done">Done!</string>
    <string name="error_q">Error!</string>
    <string name="ok">OK</string>
    <string name="qr_wrong">The QR is incorrect or doesn\'t belong to the system</string>
    <string name="phone_wrong">The cellphone number is empty or wrong</string>
    <string name="code_wrong">The code is empty or incorrect</string>
    <string name="conn_err">The request could not be completed, check your connection and try again!</string>
    <string name="camera_permission_rationale">The camera is necessary to read QR codes</string>
    <string name="sms_permissions_rationale">SMS permissions are necessary to send manual code</string>
    <string name="cancel">Cancel</string>
    <string name="sending">Sending…</string>
    <string name="retry">Retry</string>
    <string name="enter_place_code">Enter the place code</string>
    <string name="enter_cellphone">Enter your cellphone</string>
    <string name="clear_attendances_done">Visit list erased!</string>
    <string name="cleared_all">All setting cleared!</string>
    <string name="settings_saved">Settings saved!</string>
    <string name="sms_no_permission">It\'s not possible to send manual code without SMS permission</string>
</resources>