<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="cellphone"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bottom_sheet"
        android:padding="@dimen/double_space">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/space"
            android:layout_marginEnd="@dimen/space"
            android:padding="@dimen/space">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/inline_icon"
                    android:layout_height="@dimen/inline_icon"
                    android:src="@drawable/cellphone"
                    android:layout_marginEnd="@dimen/space"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/title"
                    android:text="@string/enter_cellphone"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_space"
                android:text="You will only have to do this once"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/double_space"
                android:background="@drawable/edit_round"
                android:padding="@dimen/space"
                android:textSize="28sp"
                android:textAlignment="center"
                android:inputType="phone"
                android:text="@={cellphone}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="@dimen/double_space"
            android:padding="@dimen/space">

            <Button
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black"
                android:text="@string/terms"/>

            <Button
                android:id="@+id/privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/black"
                android:text="@string/privacy"/>

            <Button
                android:id="@+id/agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space"
                android:text="@string/agreed"/>

        </LinearLayout>

    </LinearLayout>

</layout>